fixed issue w/ background colors cutting off

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,8 +31,9 @@ code {
   font-family: Menlo, Monaco, Lucida Console, Courier New, monospace;
 }
 
-.container {
+.full-container {
   height: 100vh;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
